--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,9 +45,6 @@ jobs:
           git push git@github.com:${{ github.repository }} HEAD:${{ github.ref_name }}
 
 
-
-
-
   build_server:
     needs: prepare
     runs-on: ubuntu-latest
@@ -72,8 +69,8 @@ jobs:
         env:
           ECR_REPOSITORY: server
         run: |
-          ECR_REGISTRY=${{ steps.login-ecr.outputs.ecr_registry }}
-          IMAGE_TAG=${{ steps.login-ecr.outputs.image_tag }}
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registey }}
+          IMAGE_TAG=${{ steps.package_version.outputs.version }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/server/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
@@ -82,12 +79,27 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Get version from package.json
+        id: package_version
+        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
+
       - name: Build, tag, and push guest image to Amazon ECR
         env:
           ECR_REPOSITORY: guest
         run: |
-          ECR_REGISTRY=${{ needs.prepare.outputs.ecr_registry }}
-          IMAGE_TAG=${{ needs.prepare.outputs.image_tag }}
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registey }}
+          IMAGE_TAG=${{ steps.package_version.outputs.version }}
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/guest/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
@@ -96,11 +108,26 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Get version from package.json
+        id: package_version
+        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
+        
       - name: Build, tag, and push host image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ needs.prepare.outputs.ecr_registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registey }}
+          IMAGE_TAG: ${{ steps.package_version.outputs.version }}
           ECR_REPOSITORY: host
-          IMAGE_TAG: ${{ needs.prepare.outputs.image_tag }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/host/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
