--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,6 +56,8 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Extract version from package.json
+        run: echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -73,13 +75,10 @@ jobs:
         run: echo "version=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
       - name: Build, tag, and push server image to Amazon ECR
-        env:
-          ECR_REPOSITORY: server
         run: |
           ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG=${{ env.version }}
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/server/Dockerfile .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/server:$IMAGE_TAG -f ./apps/server/Dockerfile .
+          docker push $ECR_REGISTRY/server:$IMAGE_TAG
 
   build_guest:
     needs: prepare
