--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,8 +56,17 @@ jobs:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
       - name: Extract version from package.json
-        run: echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+        run: |
+          echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -69,10 +78,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Get version from package.json
-        id: package_version
-        run: echo "version=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
       - name: Build, tag, and push server image to Amazon ECR
         run: |
@@ -80,10 +85,23 @@ jobs:
           docker build -t $ECR_REGISTRY/server:$IMAGE_TAG -f ./apps/server/Dockerfile .
           docker push $ECR_REGISTRY/server:$IMAGE_TAG
 
+
   build_guest:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
+      - name: Extract version from package.json
+        run: |
+          echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -95,23 +113,29 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Get version from package.json
-        id: package_version
-        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
-
       - name: Build, tag, and push guest image to Amazon ECR
-        env:
-          ECR_REPOSITORY: guest
         run: |
           ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG=${{ env.version }}
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/guest/Dockerfile .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/guest:$IMAGE_TAG -f ./apps/guest/Dockerfile .
+          docker push $ECR_REGISTRY/guest:$IMAGE_TAG
+
 
   build_host:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
+      - name: Extract version from package.json
+        run: |
+          echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -123,18 +147,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Get version from package.json
-        id: package_version
-        run: echo "::set-output name=version::$(cat package.json | jq -r .version)"
-
       - name: Build, tag, and push host image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ env.version }}
-          ECR_REPOSITORY: host
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./apps/host/Dockerfile .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
+          docker build -t $ECR_REGISTRY/host:$IMAGE_TAG -f ./apps/host/Dockerfile .
+          docker push $ECR_REGISTRY/host:$IMAGE_TAG
 
   update_task_definitions_and_services:
     needs: [ build_server, build_guest, build_host ]
