--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -149,6 +149,13 @@ jobs:
     needs: [ build_server, build_guest, build_host ]
     runs-on: ubuntu-latest
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Fetch current Server task definition
         id: current-task-def-server
         run: |
