--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -186,27 +186,28 @@ jobs:
           jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)' current-host-task-def.json > updated-host-task-def.json
           jq '.containerDefinitions[0].image="${{ steps.login-ecr.outputs.registry }}/host:${{ env.IMAGE_TAG }}"' updated-host-task-def.json > final-host-task-def.json
 
-      - name: Register task definition for server
+
+          - name: Register task definition for server
         run: |
-          aws ecs register-task-definition --cli-input-json file://updated-server-task-def.json
+          aws ecs register-task-definition --cli-input-json file://final-server-task-def.json
 
       - name: Register task definition for guest
         run: |
-          aws ecs register-task-definition --cli-input-json file://updated-guest-task-def.json
+          aws ecs register-task-definition --cli-input-json file://final-guest-task-def.json
 
       - name: Register task definition for host
         run: |
-          aws ecs register-task-definition --cli-input-json file://updated-host-task-def.json
+          aws ecs register-task-definition --cli-input-json file://final-host-task-def.json
 
       - name: Update ECS Service for server
         run: |
-          aws ecs update-service --cluster your-cluster-name --service server-service-name --task-definition server-family
+          aws ecs update-service --cluster your-cluster-name --service server-service-name --task-definition server
 
       - name: Update ECS Service for guest
         run: |
-          aws ecs update-service --cluster your-cluster-name --service guest-service-name --task-definition guest-family
+          aws ecs update-service --cluster your-cluster-name --service guest-service-name --task-definition guest
 
       - name: Update ECS Service for host
         run: |
-          aws ecs update-service --cluster your-cluster-name --service host-service-name --task-definition host-family
+          aws ecs update-service --cluster your-cluster-name --service host-service-name --task-definition host
 
