--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -156,6 +156,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Extract version from package.json
+        run: |
+          echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
       - name: Fetch current Server task definition
         id: current-task-def-server
         run: |
@@ -173,17 +188,17 @@ jobs:
 
       - name: Update task definition for server
         run: |
-          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' current-server-task-def.json > updated-server-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)' current-server-task-def.json > updated-server-task-def.json
           jq '.containerDefinitions[0].image="${{ steps.login-ecr.outputs.registry }}/server:${{ env.IMAGE_TAG }}"' updated-server-task-def.json > final-server-task-def.json
 
       - name: Update task definition for guest
         run: |
-          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' current-guest-task-def.json > updated-guest-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)' current-guest-task-def.json > updated-guest-task-def.json
           jq '.containerDefinitions[0].image="${{ steps.login-ecr.outputs.registry }}/guest:${{ env.IMAGE_TAG }}"' updated-guest-task-def.json > final-guest-task-def.json
 
       - name: Update task definition for host
         run: |
-          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' current-server-task-def.json > updated-host-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)' current-host-task-def.json > updated-host-task-def.json
           jq '.containerDefinitions[0].image="${{ steps.login-ecr.outputs.registry }}/host:${{ env.IMAGE_TAG }}"' updated-host-task-def.json > final-host-task-def.json
 
 
@@ -201,13 +216,13 @@ jobs:
 
       - name: Update ECS Service for server
         run: |
-          aws ecs update-service --cluster prod --service server --task-definition server
+          aws ecs update-service --cluster your-cluster-name --service server-service-name --task-definition server
 
       - name: Update ECS Service for guest
         run: |
-          aws ecs update-service --cluster prod --service guest --task-definition guest
+          aws ecs update-service --cluster your-cluster-name --service guest-service-name --task-definition guest
 
       - name: Update ECS Service for host
         run: |
-          aws ecs update-service --cluster prod --service host --task-definition host
+          aws ecs update-service --cluster your-cluster-name --service host-service-name --task-definition host
 
