--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -188,15 +188,16 @@ jobs:
 
       - name: Update task definition for server
         run: |
-          jq '(.containerDefinitions[0].image)="${{ steps.login-ecr.outputs.registry }}/server:$IMAGE_TAG"' current-server-task-def.json > final-server-task-def.json
+          jq --arg image_tag ${{ env.IMAGE_TAG }} --arg ecr_registry ${{ steps.login-ecr.outputs.registry }} '.containerDefinitions[0].image = $ecr_registry + "/server:" + $image_tag' current-server-task-def.json > final-server-task-def.json
 
       - name: Update task definition for guest
         run: |
-          jq '(.containerDefinitions[0].image)="${{ steps.login-ecr.outputs.registry }}/guest:$IMAGE_TAG"' current-guest-task-def.json > final-guest-task-def.json
+          jq --arg image_tag ${{ env.IMAGE_TAG }} --arg ecr_registry ${{ steps.login-ecr.outputs.registry }} '.containerDefinitions[0].image = $ecr_registry + "/guest:" + $image_tag' current-guest-task-def.json > final-guest-task-def.json
 
       - name: Update task definition for host
         run: |
-          jq '(.containerDefinitions[0].image)="${{ steps.login-ecr.outputs.registry }}/host:$IMAGE_TAG"' current-host-task-def.json > final-host-task-def.json
+          jq --arg image_tag ${{ env.IMAGE_TAG }} --arg ecr_registry ${{ steps.login-ecr.outputs.registry }} '.containerDefinitions[0].image = $ecr_registry + "/host:" + $image_tag' current-host-task-def.json > final-host-task-def.json
+
 
       - name: Register task definition for server
         run: |
